--- a/bitsharesqt/mainwindow.ui
+++ b/bitsharesqt/mainwindow.ui
@@ -2760,6 +2760,245 @@ So, this is a simple address book, and the Labels could be anything you want,</s
             </layout>
            </widget>
           </widget>
+          <widget class="QWidget" name="pageBorrow">
+           <widget class="QWidget" name="layoutWidget_4">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>10</y>
+              <width>441</width>
+              <height>281</height>
+             </rect>
+            </property>
+            <layout class="QFormLayout" name="formLayout_13">
+             <property name="sizeConstraint">
+              <enum>QLayout::SetMaximumSize</enum>
+             </property>
+             <property name="horizontalSpacing">
+              <number>20</number>
+             </property>
+             <property name="verticalSpacing">
+              <number>20</number>
+             </property>
+             <item row="0" column="0">
+              <widget class="QLabel" name="borrowAccountLabel">
+               <property name="text">
+                <string>Account</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QComboBox" name="borrowerBox">
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>26</height>
+                </size>
+               </property>
+               <property name="editable">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0">
+              <widget class="QLabel" name="borrowAssetLabel">
+               <property name="text">
+                <string>Asset to Borrow</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1">
+              <layout class="QHBoxLayout" name="horizontalLayout_34">
+               <property name="spacing">
+                <number>20</number>
+               </property>
+               <item>
+                <widget class="QDoubleSpinBox" name="borrowAmount">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="minimumSize">
+                  <size>
+                   <width>0</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                 <property name="locale">
+                  <locale language="C" country="AnyCountry"/>
+                 </property>
+                 <property name="buttonSymbols">
+                  <enum>QAbstractSpinBox::NoButtons</enum>
+                 </property>
+                 <property name="decimals">
+                  <number>5</number>
+                 </property>
+                 <property name="maximum">
+                  <double>999999.989999999990687</double>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QComboBox" name="borrowAssetCombo">
+                 <property name="minimumSize">
+                  <size>
+                   <width>0</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                 <property name="editable">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item row="2" column="0">
+              <widget class="QLabel" name="borrowFairPriceLabel">
+               <property name="font">
+                <font>
+                 <italic>false</italic>
+                </font>
+               </property>
+               <property name="text">
+                <string>Collateral</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="1">
+              <layout class="QHBoxLayout" name="horizontalLayout_33">
+               <item>
+                <widget class="QDoubleSpinBox" name="borrowCollateralAmount">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="minimumSize">
+                  <size>
+                   <width>0</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                 <property name="locale">
+                  <locale language="C" country="AnyCountry"/>
+                 </property>
+                 <property name="buttonSymbols">
+                  <enum>QAbstractSpinBox::NoButtons</enum>
+                 </property>
+                 <property name="decimals">
+                  <number>5</number>
+                 </property>
+                 <property name="maximum">
+                  <double>999999.989999999990687</double>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QComboBox" name="borrowCollateralAssetCombo">
+                 <property name="enabled">
+                  <bool>false</bool>
+                 </property>
+                 <property name="minimumSize">
+                  <size>
+                   <width>0</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                 <property name="editable">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item row="3" column="1">
+              <layout class="QHBoxLayout" name="horizontalLayout_30">
+               <item>
+                <spacer name="horizontalSpacer_9">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>40</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+               <item>
+                <widget class="QPushButton" name="borrowOpenMarketButton">
+                 <property name="minimumSize">
+                  <size>
+                   <width>0</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                 <property name="text">
+                  <string>Open Market</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item row="4" column="0">
+              <widget class="QLabel" name="borrowFeeLabel">
+               <property name="text">
+                <string>Fee Asset</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="1">
+              <layout class="QHBoxLayout" name="horizontalLayout_31">
+               <property name="spacing">
+                <number>20</number>
+               </property>
+               <item>
+                <widget class="QComboBox" name="borrowFeeAsset">
+                 <property name="minimumSize">
+                  <size>
+                   <width>0</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                 <property name="editable">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item row="5" column="1">
+              <layout class="QHBoxLayout" name="horizontalLayout_32">
+               <item>
+                <spacer name="horizontalSpacer_10">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>40</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+               <item>
+                <widget class="QPushButton" name="borrowButton">
+                 <property name="text">
+                  <string>Send</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+            </layout>
+           </widget>
+          </widget>
           <widget class="QWidget" name="pageSettle">
            <widget class="QWidget" name="layoutWidget_2">
             <property name="geometry">
@@ -2993,7 +3232,7 @@ So, this is a simple address book, and the Labels could be anything you want,</s
                <item>
                 <widget class="QLabel" name="settleFairAssetLabel">
                  <property name="text">
-                  <string>COINNAME</string>
+                  <string>BTS</string>
                  </property>
                 </widget>
                </item>
@@ -3080,6 +3319,20 @@ So, this is a simple address book, and the Labels could be anything you want,</s
              <property name="icon">
               <iconset resource="res.qrc">
                <normaloff>:/op/images/op/fill_order.png</normaloff>:/op/images/op/fill_order.png</iconset>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="viewOpBorrow">
+             <property name="text">
+              <string>Borrow</string>
+             </property>
+             <property name="icon">
+              <iconset resource="res.qrc">
+               <normaloff>:/op/images/op/call_order_update.png</normaloff>:/op/images/op/call_order_update.png</iconset>
              </property>
              <property name="checkable">
               <bool>true</bool>
@@ -3472,6 +3725,7 @@ So, this is a simple address book, and the Labels could be anything you want,</s
      </property>
      <addaction name="actionTransfer"/>
      <addaction name="actionSell"/>
+     <addaction name="actionBorrow"/>
      <addaction name="actionSettle"/>
      <addaction name="separator"/>
      <addaction name="actionShowOperations"/>
@@ -3792,7 +4046,12 @@ image: &quot;&quot;;
   </action>
   <action name="actionSettle">
    <property name="text">
-    <string>Settle</string>
+    <string>&amp;Settle</string>
+   </property>
+  </action>
+  <action name="actionBorrow">
+   <property name="text">
+    <string>&amp;Borrow</string>
    </property>
   </action>
  </widget>
